# qwencandle

./: CLAUDE.md  Cargo.toml  README.md  pyproject.toml  qwencandle.pyi
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
src/: audio.rs  decoder.rs  encoder.rs  gguf.rs  layers.rs  lib.rs  main.rs  python.rs  tokenizer.rs
