[package]
name = "qwencandle"
version = "0.0.1-alpha1"
edition = "2021"

[dependencies]
candle-core = "0.10.2"
candle-nn = "0.10.2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.22"
hf-hub = "0.5"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
accelerate = ["candle-nn/accelerate"]
