[package]
name = "qwencandle"
version = "0.0.2"
edition = "2021"

[lib]
name = "qwencandle"

[dependencies]
candle-core = "0.10.2"
candle-nn = "0.10.2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.22"
hf-hub = "0.5"
pyo3 = { version = "0.27", optional = true, features = ["abi3-py39", "extension-module"] }
numpy = { version = "0.27", optional = true }

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
accelerate = ["candle-nn/accelerate"]
python = ["dep:pyo3", "dep:numpy"]
