[package]
name = "qwencandle"
version = "0.0.4-beta1"
edition = "2021"

[lib]
name = "qwencandle"

[dependencies]
burn = "0.20.1"
burn-cuda = { version = "0.20.1", optional = true }
burn-wgpu = "0.20.1"
safetensors = "0.7.0"
memmap2 = "0.9"
half = { version = "2", features = ["num-traits"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.22"
hf-hub = "0.5"
pyo3 = { version = "0.27", optional = true, features = ["abi3-py39", "extension-module"] }
numpy = { version = "0.27", optional = true }

[features]
default = []
metal = ["burn-wgpu/metal"]
cuda = ["burn-cuda"]
python = ["dep:pyo3", "dep:numpy"]
